logo and humburder alignment fixed

--- a/style.css
+++ b/style.css
@@ -71,17 +71,7 @@ form input{
     margin-top: 3px;
     
   }
-  /* #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.middle{
-    opacity: 0;
-  }
-  #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.top{
-    transform: rotate(135deg);
-    margin-top: 8px;
-  }
-  #openSidebarMenu:checked ~ .sidebarIconToggle > .spinner.bottom{
-    transform: rotate(-135deg);
-    margin-top: -9px
-  } */
+ 
 @media screen and (max-width: 1042px) {
     nav {
       display: none;
@@ -139,6 +129,11 @@ header p{
 
     /* border-color:  linear-gradient(219deg, #00F0FF 0%, #5200FF 48.25%, #FF2DF7 100%); */
 }
+@media screen and (max-width: 654px) {
+    header h1{
+        margin-top: 20%;
+    }
+}
 
 @media screen and (max-width: 992px) {
     .header-content{
@@ -150,6 +145,12 @@ header p{
     }
     .header-content .header-btn button{
         margin-bottom: 5%;
+    }
+    header h1{
+        font-size: 50px;
+    }
+    header h2{
+        font-size: 45px;
     }
   }
 
